# income_research_os

./: .env.example  .funnel_checkpoint.json  .funnel_domain_cache.json  .gitignore  README.md  _debug_cols.py  _debug_mcd.py  beta_results.txt  mimo_results.txt  pyproject.toml  report.html  test_output.txt
.github/workflows/: monthly-beta.yml
docs/: index.html
mcp_servers/: __init__.py  backtest_mcp.py  bursa_malaysia_mcp.py  macro_regime_mcp.py  market_data_mcp.py  research_store_mcp.py  sec_filings_mcp.py
scripts/: _dip_analysis.py  _score_detail.py  _test_mimo.py  phase1_single_stock.py  run_funnel.py  test_mimo_batch.py
src/incomos/: __init__.py  sizing.py
src/incomos/api/: main.py
src/incomos/backtest/: validation.py
src/incomos/core/: config.py  exceptions.py  types.py
src/incomos/data/: bursa.py  edgar.py  filings.py  fred.py  market.py  nobl.py  universe.py
src/incomos/funnel/: dip_trigger.py  entry_attractiveness.py  kiv.py  refresh.py
src/incomos/llm/: mimo.py  schemas.py
src/incomos/macro/: __init__.py  regime.py
src/incomos/persistence/: db.py  queries.py  session.py
src/incomos/scoring/: business.py  dip.py  engine.py  income.py  oversold.py
src/incomos/screening/: stage01.py
tests/: test_edgar.py  test_entry_attractiveness.py  test_kiv.py  test_llm_schemas.py  test_mimo_batch.py  test_nobl.py  test_scoring.py  test_stage01.py
