[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incomos"
version = "0.1.0"
description = "Income Compounder Research OS — funnel-based dividend stock research platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "httpx>=0.27",           # HTTP client for EDGAR + FRED APIs
    "sqlalchemy>=2.0",       # ORM
    "alembic>=1.13",         # DB migrations
    "psycopg2-binary>=2.9",  # PostgreSQL driver
    "python-dotenv>=1.0",
    "rich>=13",              # Console output
    "tenacity>=8.3",         # Retry with backoff
    "click>=8.1",            # CLI scripts
    "yfinance>=0.2",         # Market data — Bursa .KL + US stocks
    "mcp[cli]>=1.0",         # Model Context Protocol Python SDK
    "pandas>=2.0",           # Required by yfinance + backtest/validation
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-httpx>=0.30",
    "ruff>=0.4",
    "responses>=0.25",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
